admin ctegory ids filter
